--- a/src/content/blog/SEO starter kit.mdx
+++ b/src/content/blog/SEO starter kit.mdx
@@ -113,6 +113,6 @@ I’m going to show the [amp](https://amp.dev/) example, amp is just a google th
 </html>
 ```
 
-You can test that your page will be rich result ready aka SEO-tastic with [this tool](https://search.google.com/test/rich-results) you can find more example schema’s for things other than Articles [here](https://developers.google.com/search/docs/data-types/article)
+You can test that your page will be rich result ready aka SEO-tastic with [this tool](https://search.google.com/test/rich-results) [you can find more example schema’s for things other than Articles](https://developers.google.com/search/docs/data-types/article)
 
 Hope you enjoyed!
