--- a/src/content/blog/Revisiting My First Homepage.mdx
+++ b/src/content/blog/Revisiting My First Homepage.mdx
@@ -50,6 +50,7 @@ Checkout all the sides below, cheers!
 	scrolling='no'
 	style='border:1px solid #CCC; border-width:1px; margin-bottom:5px;max-width: 100%;'
 	allowfullscreen
+  title="slideshare link"
 />
 <div style='margin-bottom:5px'>
 	<strong>
