--- a/src/content/blog/Revisiting My First Homepage.mdx
+++ b/src/content/blog/Revisiting My First Homepage.mdx
@@ -70,4 +70,4 @@ Checkout all the sides below, cheers!
 	</strong>
 
 </div>
-<BlueskyPost id='https://bsky.app/profile/jswhisperer.bsky.social/post/3lfdi6k3guk2v' />
+{/* <BlueskyPost id='https://bsky.app/profile/jswhisperer.bsky.social/post/3lfdi6k3guk2v' /> */}
