--- a/src/content/blog/Proton Native.mdx
+++ b/src/content/blog/Proton Native.mdx
@@ -50,11 +50,11 @@ Another couple weird issues `border-radius` is really finicky works on mostly sq
 Way at the bottom of this [page](https://support.nordvpn.com/Connectivity/Linux/1325531132/Installing-and-using-NordVPN-on-Debian-Ubuntu-Elementary-OS-and-Linux-Mint.htm) are the CLI options for nordVPN. on an aside I found out linux is terribly supported even here, there’s no option to connect via a country or anything very useful at all. Here’s a few useless commands they offer
 
 ```bash
-nordvpn countries # - See the country list.
+nordvpn countries
 
-nordvpn cities # - See the city list.
+nordvpn cities
 
-nordvpn groups # - See a list of available server groups.
+nordvpn groups
 ```
 
 I mean it just prints out some countries, you can’t use that info in any way though.
@@ -62,11 +62,11 @@ I mean it just prints out some countries, you can’t use that info in any way t
 Ok some of the useful commands are
 
 ```bash
-nordvpn account # - See account information
+nordvpn account
 
-nordvpn status # - See the connection status.
+nordvpn status
 
-nordvpn login # - Log in.
+nordvpn login
 
 nordvpn connect
 ```
