--- a/src/content/blog/Proton Native.mdx
+++ b/src/content/blog/Proton Native.mdx
@@ -155,8 +155,10 @@ One more warning about spawn processes, yes it’s super fun, but right now PN d
 Ok last step time to [package](https://proton-native.js.org) this bad boy for distribution. I’ll let you read those for yourself but one thing I tripped on was this command
 
 ```bash
-npx nexe bin/index.js -o out/my-app # Create our binary
+npx nexe bin/index.js -o out/my-app
 ```
+
+to # Create our binary
 
 [If you are not using one of the available matching prebuilt binaries it tries to build locally, and for me it just failed hard; so check](https://github.com/nexe/nexe/releases/) and use nvm to adjust your node.js to a matching one.
 
