--- a/src/content/blog/OpenFaas.mdx
+++ b/src/content/blog/OpenFaas.mdx
@@ -29,9 +29,9 @@ As per the docs (please refer to the official docs for up to date instructions)
 
 ```bash
 # For MacOS / Linux:
-curl -SLsf https://dl.get-arkade.dev/ | sudo sh
+curl -SLsf https://get.arkade.dev/ | sudo sh
 # For Windows (using Git Bash)
-curl -SLsf https://dl.get-arkade.dev/ | sh
+curl -SLsf https://get.arkade.dev/ | sh
 arkade get kubect`
 arkade get kind
 kind create cluster
