--- a/src/content/blog/OpenFaas.mdx
+++ b/src/content/blog/OpenFaas.mdx
@@ -48,23 +48,30 @@ So now comes the fun part making our own functions. Here’s the [official docs]
 
 Let’s grab the official templates by changing into a directory like ./faas-templates and running
 
-`faas-cli template pull`
-`# now list them`
-`faas-cli template store list`
-`# lets create a node12 with express function`
-`faas-cli new node12func --lang node12`
+```bash
+faas-cli template pull
+# now list them
+faas-cli template store list
+# lets create a node12 with express function
+faas-cli new node18func --lang node18
+```
 
 You will now see two files generate:
 
-`node12func.yml`
-`node12func/`
-`node12func/handler.js`
+```bash
+node18func.yml
+node18func/
+node18func/handler.js
+node18func/package.json
+```
 
-Let's have a look at the template used to create these files to get an idea of what's going on, [here](https://github.com/openfaas/templates/tree/master/template/node12), or on your machine. You will see a [Dockerfile](https://github.com/openfaas/templates/blob/master/template/node12/Dockerfile) what’s most of interest here is the image it builds from which is node v.12 alpine. If you had a requirement for a different version of node, or say rather than alpine you wanted full ubuntu you could copy this template and create your own. The other very important file is a wrapper around handler [here](https://github.com/openfaas/templates/blob/master/template/node12/index.js). This holds the meat and potatoes of your express server, if you need to debug handler.js is useful to see this file. Again if you wanted to create your own template, maybe add logging to all request with Winston or something else index.js is where you would do it.
+Let's have a look at the template used to create these files to get an idea of what's going on, [here](https://github.com/openfaas/templates/tree/master/template/node12), or on your machine. You will see a [Dockerfile](https://github.com/openfaas/templates/blob/master/template/node12/Dockerfile) what’s most of interest here is the image it builds from which is node v.18 alpine. If you had a requirement for a different version of node, or say rather than alpine you wanted full ubuntu you could copy this template and create your own. The other very important file is a wrapper around handler [here](https://github.com/openfaas/templates/blob/master/template/node12/index.js). This holds the meat and potatoes of your express server, if you need to debug handler.js is useful to see this file. Again if you wanted to create your own template, maybe add logging to all request with Winston or something else index.js is where you would do it.
 
 So after you make some changes to handler.js (you don’t have to) we need to build the docker image and push it to dockerhub under your username. Make sure you are logged in with the docker by running docker login Now we need to update the yaml, open node12func.yml and update image: add your username and a tag for the docker image such as latest like so image: yourusername/node12func\:latest Ok let’s get this deployed run
 
-`faas-cli up -f node12func.yml`
+```bash
+faas-cli up -f node18func.yml
+```
 
 this is running all these commands for you
 
@@ -74,6 +81,6 @@ this is running all these commands for you
 
 To test out your new function head to [http://localhost:8080/ui/](http://localhost:8080/ui/) select the function from the list on the left, and hit invoke! If invoke is grayed out it is either still being deployed, or possibly broken. If it takes more than 5 minutes it’s time to investigate. Hopefully it didn’t break but here’s a useful debugging command to check
 
-`kubectl logs -n openfaas-fn deploy/node12func`
+`kubectl logs -n openfaas-fn deploy/node18func`
 
 Hopefully you found this whirlwind intro useful, for sure check out the many guides and official docs too!
