--- a/src/content/author/greg.mdx
+++ b/src/content/author/greg.mdx
@@ -2,5 +2,5 @@
 bio: ''
 name: greg
 url: 'https://jswhisperer.uk/author/greg'
-avatar: /src/assets/images/uploads/greg.jpeg
+avatar: '/src/assets/images/uploads/greg.jpeg'
 ---
