--- a/src/content/blog/Frontend Devs.mdx
+++ b/src/content/blog/Frontend Devs.mdx
@@ -1,5 +1,5 @@
 ---
-heroImage: /src/assets/images/uploads/7b6ld2c3bl65co0l6d5t.png
+heroImage: '../../assets/images/uploads/7b6ld2c3bl65co0l6d5t.png'
 category: JavaScript
 description: A quest to figure out what makes Front End Developers a rare commodity.
 pubDate: 2013-07-02T23:00:00.000Z
