--- a/src/content/blog/Get started with Nuxt.mdx
+++ b/src/content/blog/Get started with Nuxt.mdx
@@ -1,5 +1,5 @@
 ---
-heroImage: /src/assets/images/uploads/7b6ld2c3bl65co0l6d5t.png
+heroImage: '../../assets/images/uploads/7b6ld2c3bl65co0l6d5t.png'
 category: JavaScript
 description: >-
   This is my goto stack Nuxt.js which is server side rendered framework around
