--- a/src/content/blog/NodeGUI.mdx
+++ b/src/content/blog/NodeGUI.mdx
@@ -1,6 +1,5 @@
 ---
-heroImage: >-
-  /src/assets/images/uploads/https___dev-to-uploads.s3.amazonaws.com_i_7b6ld2c3bl65co0l6d5t.jpeg
+heroImage: '../../assets/images/uploads/https___dev-to-uploads.s3.amazonaws.com_uploads_articles_0f0arenmyx88zjd8tvtz.jpg'
 category: JavaScript
 description: "Let's have a look at NodeGUI, NordVPN and Node.js"
 pubDate: 2022-07-01T23:00:00.000Z
