--- a/src/content/blog/OpenFaas.mdx
+++ b/src/content/blog/OpenFaas.mdx
@@ -1,5 +1,5 @@
 ---
-heroImage: /src/assets/images/uploads/7b6ld2c3bl65co0l6d5t.png
+heroImage: '../../assets/images/uploads/7b6ld2c3bl65co0l6d5t.png'
 category: JavaScript
 description: 'Serverless Functions, Made Simple."'
 pubDate: 2020-08-10T23:00:00.000Z
