--- a/src/content/blog/WebView Apps on your OS.mdx
+++ b/src/content/blog/WebView Apps on your OS.mdx
@@ -1,6 +1,5 @@
 ---
-heroImage: >-
-  /src/assets/images/uploads/https___dev-to-uploads.s3.amazonaws.com_uploads_articles_0f0arenmyx88zjd8tvtz.jpg
+heroImage: '../../assets/images/uploads/https___dev-to-uploads.s3.amazonaws.com_uploads_articles_0f0arenmyx88zjd8tvtz.jpg'
 category: JavaScript
 author: greg
 description: An exploration of webview apps for desktop
