--- a/src/content/blog/Revisiting My First Homepage.mdx
+++ b/src/content/blog/Revisiting My First Homepage.mdx
@@ -12,19 +12,20 @@ blskyid: 3lfdi6k3guk2v
 ---
 
 import { BlueskyPost } from 'astro-embed'
+import perf from '../../assets/images/uploads/https___dev-to-uploads.s3.amazonaws.com_uploads_articles_tc5vcx1t4kfoget0917e.png'
 
 I had to the [wayback internet archive](https://web.archive.org/) to find a snapshot from 2009.
 
 I left it as is and check the lighthouse scores I was happily surprised.
 
-{/_ <Picture
-layout='responsive'
-src={(import'/src/assets/images/perf scores.png')}
-alt="nordvpn'"
-style='opacity: 1;'
-decoding='async'
-formats={['avif', 'webp']}
-/> _/}
+<Picture
+	layout='responsive'
+	src={perf}
+	alt="nordvpn'"
+	style='opacity: 1;'
+	decoding='async'
+	formats={['avif', 'webp']}
+/>
 
 A lot of the best practises I preached back in Cape Town 15 years ago are still applicable. Albeit there are new and better ones, but some of the classics still apply!
 
