--- a/src/content/blog/Webmentions Revisted.mdx
+++ b/src/content/blog/Webmentions Revisted.mdx
@@ -19,9 +19,9 @@ I'd say, to my knowledge, there haven't been huge strides or adaptation of them 
 
 What is the FED web? from [brid.gy fed](https://fed.brid.gy/docs#web-get-started) and here [fediverse](https://en.wikipedia.org/wiki/Fediverse) and [here on the verge](https://www.theverge.com/24063290/fediverse-explained-activitypub-social-media-open-protocol)
 
-<blockquote>Bridgy Fed is a decentralized social network bridge. It connects the Fediverse, the web, and [bluesky]("https://bsky.app/profile/jswhisperer.bsky.social") . If you're on one of these networks, you can use Bridgy Fed to follow people on other networks, see their posts, and reply, like and repost them. Likewise, they'll be able to see you and your posts, too.
+Bridgy Fed is a decentralized social network bridge. It connects the Fediverse, the web, and [bluesky]("https://bsky.app/profile/jswhisperer.bsky.social") . If you're on one of these networks, you can use Bridgy Fed to follow people on other networks, see their posts, and reply, like and repost them. Likewise, they'll be able to see you and your posts, too.
 
-Click here to get started, or read on for more information and setup details.</blockquote>
+Click here to get started, or read on for more information and setup details.
 
 So last time I wrote about integrating with [Gridsome](https://github.com/gridsome/gridsome) "The Jamstack framework for Vue.js" and a GrapQL solution; I've since moved my blog to [Astro](https://astro.build/)
 
